<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shaula.igor.google_maps.MainActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <!--map:cameraBearing="112.5"-->
    <!--map:cameraTargetLat="40.7484"-->
    <!--map:cameraTargetLng="-73.9857"-->
    <!--map:cameraTilt="65"-->
    <!--map:cameraZoom="17" />-->

    <!--com.google.android.gms.maps.MapFragment-->

    <Button
        android:id="@+id/bGoToStreetView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/goToGrandCanyon"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/bGoToNextLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/goToNextLocation"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bMap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/map"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/bTerrain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terrain"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/bHybrid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hybrid"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/bSatellite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/satellite"
            android:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>